# kanary

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  compose.yaml  kanaryctl  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  helper_or_feature_request.md
.github/workflows/: publish-container.yml
demo/: basic_monitoring.py
dev/: emulate_sqlite.py
docs/: api.md  api_ja.md  deployment.md  deployment_ja.md  development.md  development_ja.md  getting_started.md  getting_started_ja.md  operations.md  operations_ja.md  plugins.md  plugins_ja.md
examples/: discord_webhook_output.py  factory_patterns.py  fake_alarm_monitoring.py  fake_alarm_target.py  getting_started.py  latest_postgres.py  peer_monitoring.py  remote_alarm_import.py  self_plugin_monitoring.py  sqlite_console_output.py  sqlite_monitoring.py
src/kanary/: __init__.py  __main__.py  api.py  constants.py  ctl.py  engine.py  filtering.py  loader.py  models.py  output.py  patterns.py  registry.py  remote.py  rule.py  runtime.py  schedule.py  source.py  store.py  units.py  validation.py
src/kanary/web/: app.js  index.html  styles.css
tests/: test_engine.py
