[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kanary"
version = "0.2.0"
description = "Python-based alerting, notification, and reliability monitoring runtime"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Keita Mizukoshi"},
]
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
]
keywords = ["monitoring", "alerting", "notifications", "reliability", "operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/mzks/kanary"
Repository = "https://github.com/mzks/kanary"
Issues = "https://github.com/mzks/kanary/issues"
Documentation = "https://github.com/mzks/kanary#readme"

[project.scripts]
kanary = "kanary.__main__:main"
kanaryctl = "kanary.ctl:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
kanary = ["web/*.html", "web/*.js", "web/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
